<resources>
    <string name="app_name">test2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="grapes">Grapes</string>
    <string name="orange">Orange</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>
    <string name="title_alarm_name">title alarm name</string>
    <string name="title_vibrate">title vibrate</string>
    <string name="title_none">title none</string>
    <string name="title_delete">title delete</string>
    <string name="alarm">alarm</string>
    <string name="stopwatch">stopwatch</string>
    <string name="enter_minutes">Minutes!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timer">00:00:00</string>
    <string name="save_lap">Save Lap</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_00_01_00">00:01:00</string>
    <string name="_1">1</string>
    <string name="textview">TextView</string>
    <string name="date">Date</string>
    <string name="set_alarm">set alarm</string>
    <string name="unset_alarm">unset alarm</string>
    <string name="set_the_alarm_clock">set the alarm clock</string>
    <string name="settings">settings</string>
    <string name="Timer_Started" />
    <string name="Timer_Stopped" />
    <string name="current">:: Current Time ::</string>
    <string name="vishal" />
    <string name="stop_alarm">Stop Alarm</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="edit_text_hint">Input your Alarm time</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="label">Select your Alarm input type from below :</string>
    <string name="channel_description" />
    <string name="action_settings">action settings</string>
    <string name="did_you_set_the_alarm">Did you set the alarm?</string>
    <string name="unset">UNSET</string>
    <string name="set">SET</string>

    <string-array name="array">
        <item>Tune 1</item>
        <item>Tune 2</item>
        <item>Tune 3</item>
        <item>Tune 4</item>
    </string-array>
</resources>

